--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-json": "^4.0.0",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
     "webpack": "^5.91.0"
